# IGTAI-RayTracer

./: CMakeLists.txt  raytracer.cpp
