cmake_minimum_required(VERSION 3.9)
project(IGTAI_RayTracer)

set(CMAKE_CXX_STANDARD 11)

add_executable(IGTAI_RayTracer
        glm-0.9.8.4/glm/glm/detail/_features.hpp
        glm-0.9.8.4/glm/glm/detail/_fixes.hpp
        glm-0.9.8.4/glm/glm/detail/_noise.hpp
        glm-0.9.8.4/glm/glm/detail/_swizzle.hpp
        glm-0.9.8.4/glm/glm/detail/_swizzle_func.hpp
        glm-0.9.8.4/glm/glm/detail/_vectorize.hpp
        glm-0.9.8.4/glm/glm/detail/dummy.cpp
        glm-0.9.8.4/glm/glm/detail/func_common.hpp
        glm-0.9.8.4/glm/glm/detail/func_exponential.hpp
        glm-0.9.8.4/glm/glm/detail/func_geometric.hpp
        glm-0.9.8.4/glm/glm/detail/func_integer.hpp
        glm-0.9.8.4/glm/glm/detail/func_matrix.hpp
        glm-0.9.8.4/glm/glm/detail/func_packing.hpp
        glm-0.9.8.4/glm/glm/detail/func_trigonometric.hpp
        glm-0.9.8.4/glm/glm/detail/func_vector_relational.hpp
        glm-0.9.8.4/glm/glm/detail/glm.cpp
        glm-0.9.8.4/glm/glm/detail/precision.hpp
        glm-0.9.8.4/glm/glm/detail/setup.hpp
        glm-0.9.8.4/glm/glm/detail/type_float.hpp
        glm-0.9.8.4/glm/glm/detail/type_gentype.hpp
        glm-0.9.8.4/glm/glm/detail/type_half.hpp
        glm-0.9.8.4/glm/glm/detail/type_int.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat2x2.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat2x3.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat2x4.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat3x2.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat3x3.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat3x4.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat4x2.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat4x3.hpp
        glm-0.9.8.4/glm/glm/detail/type_mat4x4.hpp
        glm-0.9.8.4/glm/glm/detail/type_vec.hpp
        glm-0.9.8.4/glm/glm/detail/type_vec1.hpp
        glm-0.9.8.4/glm/glm/detail/type_vec2.hpp
        glm-0.9.8.4/glm/glm/detail/type_vec3.hpp
        glm-0.9.8.4/glm/glm/detail/type_vec4.hpp
        glm-0.9.8.4/glm/glm/gtc/bitfield.hpp
        glm-0.9.8.4/glm/glm/gtc/color_space.hpp
        glm-0.9.8.4/glm/glm/gtc/constants.hpp
        glm-0.9.8.4/glm/glm/gtc/epsilon.hpp
        glm-0.9.8.4/glm/glm/gtc/functions.hpp
        glm-0.9.8.4/glm/glm/gtc/integer.hpp
        glm-0.9.8.4/glm/glm/gtc/matrix_access.hpp
        glm-0.9.8.4/glm/glm/gtc/matrix_integer.hpp
        glm-0.9.8.4/glm/glm/gtc/matrix_inverse.hpp
        glm-0.9.8.4/glm/glm/gtc/matrix_transform.hpp
        glm-0.9.8.4/glm/glm/gtc/noise.hpp
        glm-0.9.8.4/glm/glm/gtc/packing.hpp
        glm-0.9.8.4/glm/glm/gtc/quaternion.hpp
        glm-0.9.8.4/glm/glm/gtc/random.hpp
        glm-0.9.8.4/glm/glm/gtc/reciprocal.hpp
        glm-0.9.8.4/glm/glm/gtc/round.hpp
        glm-0.9.8.4/glm/glm/gtc/type_aligned.hpp
        glm-0.9.8.4/glm/glm/gtc/type_precision.hpp
        glm-0.9.8.4/glm/glm/gtc/type_ptr.hpp
        glm-0.9.8.4/glm/glm/gtc/ulp.hpp
        glm-0.9.8.4/glm/glm/gtc/vec1.hpp
        glm-0.9.8.4/glm/glm/gtx/associated_min_max.hpp
        glm-0.9.8.4/glm/glm/gtx/bit.hpp
        glm-0.9.8.4/glm/glm/gtx/closest_point.hpp
        glm-0.9.8.4/glm/glm/gtx/color_space.hpp
        glm-0.9.8.4/glm/glm/gtx/color_space_YCoCg.hpp
        glm-0.9.8.4/glm/glm/gtx/common.hpp
        glm-0.9.8.4/glm/glm/gtx/compatibility.hpp
        glm-0.9.8.4/glm/glm/gtx/component_wise.hpp
        glm-0.9.8.4/glm/glm/gtx/dual_quaternion.hpp
        glm-0.9.8.4/glm/glm/gtx/euler_angles.hpp
        glm-0.9.8.4/glm/glm/gtx/extend.hpp
        glm-0.9.8.4/glm/glm/gtx/extended_min_max.hpp
        glm-0.9.8.4/glm/glm/gtx/fast_exponential.hpp
        glm-0.9.8.4/glm/glm/gtx/fast_square_root.hpp
        glm-0.9.8.4/glm/glm/gtx/fast_trigonometry.hpp
        glm-0.9.8.4/glm/glm/gtx/gradient_paint.hpp
        glm-0.9.8.4/glm/glm/gtx/handed_coordinate_space.hpp
        glm-0.9.8.4/glm/glm/gtx/hash.hpp
        glm-0.9.8.4/glm/glm/gtx/integer.hpp
        glm-0.9.8.4/glm/glm/gtx/intersect.hpp
        glm-0.9.8.4/glm/glm/gtx/io.hpp
        glm-0.9.8.4/glm/glm/gtx/log_base.hpp
        glm-0.9.8.4/glm/glm/gtx/matrix_cross_product.hpp
        glm-0.9.8.4/glm/glm/gtx/matrix_decompose.hpp
        glm-0.9.8.4/glm/glm/gtx/matrix_interpolation.hpp
        glm-0.9.8.4/glm/glm/gtx/matrix_major_storage.hpp
        glm-0.9.8.4/glm/glm/gtx/matrix_operation.hpp
        glm-0.9.8.4/glm/glm/gtx/matrix_query.hpp
        glm-0.9.8.4/glm/glm/gtx/matrix_transform_2d.hpp
        glm-0.9.8.4/glm/glm/gtx/mixed_product.hpp
        glm-0.9.8.4/glm/glm/gtx/norm.hpp
        glm-0.9.8.4/glm/glm/gtx/normal.hpp
        glm-0.9.8.4/glm/glm/gtx/normalize_dot.hpp
        glm-0.9.8.4/glm/glm/gtx/number_precision.hpp
        glm-0.9.8.4/glm/glm/gtx/optimum_pow.hpp
        glm-0.9.8.4/glm/glm/gtx/orthonormalize.hpp
        glm-0.9.8.4/glm/glm/gtx/perpendicular.hpp
        glm-0.9.8.4/glm/glm/gtx/polar_coordinates.hpp
        glm-0.9.8.4/glm/glm/gtx/projection.hpp
        glm-0.9.8.4/glm/glm/gtx/quaternion.hpp
        glm-0.9.8.4/glm/glm/gtx/range.hpp
        glm-0.9.8.4/glm/glm/gtx/raw_data.hpp
        glm-0.9.8.4/glm/glm/gtx/rotate_normalized_axis.hpp
        glm-0.9.8.4/glm/glm/gtx/rotate_vector.hpp
        glm-0.9.8.4/glm/glm/gtx/scalar_multiplication.hpp
        glm-0.9.8.4/glm/glm/gtx/scalar_relational.hpp
        glm-0.9.8.4/glm/glm/gtx/simd_mat4.hpp
        glm-0.9.8.4/glm/glm/gtx/simd_quat.hpp
        glm-0.9.8.4/glm/glm/gtx/simd_vec4.hpp
        glm-0.9.8.4/glm/glm/gtx/spline.hpp
        glm-0.9.8.4/glm/glm/gtx/std_based_type.hpp
        glm-0.9.8.4/glm/glm/gtx/string_cast.hpp
        glm-0.9.8.4/glm/glm/gtx/transform.hpp
        glm-0.9.8.4/glm/glm/gtx/transform2.hpp
        glm-0.9.8.4/glm/glm/gtx/type_aligned.hpp
        glm-0.9.8.4/glm/glm/gtx/type_trait.hpp
        glm-0.9.8.4/glm/glm/gtx/vector_angle.hpp
        glm-0.9.8.4/glm/glm/gtx/vector_query.hpp
        glm-0.9.8.4/glm/glm/gtx/wrap.hpp
        glm-0.9.8.4/glm/glm/simd/common.h
        glm-0.9.8.4/glm/glm/simd/exponential.h
        glm-0.9.8.4/glm/glm/simd/geometric.h
        glm-0.9.8.4/glm/glm/simd/integer.h
        glm-0.9.8.4/glm/glm/simd/matrix.h
        glm-0.9.8.4/glm/glm/simd/packing.h
        glm-0.9.8.4/glm/glm/simd/platform.h
        glm-0.9.8.4/glm/glm/simd/trigonometric.h
        glm-0.9.8.4/glm/glm/simd/vector_relational.h
        glm-0.9.8.4/glm/glm/common.hpp
        glm-0.9.8.4/glm/glm/exponential.hpp
        glm-0.9.8.4/glm/glm/ext.hpp
        glm-0.9.8.4/glm/glm/fwd.hpp
        glm-0.9.8.4/glm/glm/geometric.hpp
        glm-0.9.8.4/glm/glm/glm.hpp
        glm-0.9.8.4/glm/glm/integer.hpp
        glm-0.9.8.4/glm/glm/mat2x2.hpp
        glm-0.9.8.4/glm/glm/mat2x3.hpp
        glm-0.9.8.4/glm/glm/mat2x4.hpp
        glm-0.9.8.4/glm/glm/mat3x2.hpp
        glm-0.9.8.4/glm/glm/mat3x3.hpp
        glm-0.9.8.4/glm/glm/mat3x4.hpp
        glm-0.9.8.4/glm/glm/mat4x2.hpp
        glm-0.9.8.4/glm/glm/mat4x3.hpp
        glm-0.9.8.4/glm/glm/mat4x4.hpp
        glm-0.9.8.4/glm/glm/matrix.hpp
        glm-0.9.8.4/glm/glm/packing.hpp
        glm-0.9.8.4/glm/glm/trigonometric.hpp
        glm-0.9.8.4/glm/glm/vec2.hpp
        glm-0.9.8.4/glm/glm/vec3.hpp
        glm-0.9.8.4/glm/glm/vec4.hpp
        glm-0.9.8.4/glm/glm/vector_relational.hpp
        glm-0.9.8.4/glm/test/bug/bug_ms_vec_static.cpp
        glm-0.9.8.4/glm/test/core/core_force_pure.cpp
        glm-0.9.8.4/glm/test/core/core_force_unrestricted_gentype.cpp
        glm-0.9.8.4/glm/test/core/core_func_common.cpp
        glm-0.9.8.4/glm/test/core/core_func_exponential.cpp
        glm-0.9.8.4/glm/test/core/core_func_geometric.cpp
        glm-0.9.8.4/glm/test/core/core_func_integer.cpp
        glm-0.9.8.4/glm/test/core/core_func_integer_bit_count.cpp
        glm-0.9.8.4/glm/test/core/core_func_integer_find_lsb.cpp
        glm-0.9.8.4/glm/test/core/core_func_integer_find_msb.cpp
        glm-0.9.8.4/glm/test/core/core_func_matrix.cpp
        glm-0.9.8.4/glm/test/core/core_func_noise.cpp
        glm-0.9.8.4/glm/test/core/core_func_packing.cpp
        glm-0.9.8.4/glm/test/core/core_func_swizzle.cpp
        glm-0.9.8.4/glm/test/core/core_func_trigonometric.cpp
        glm-0.9.8.4/glm/test/core/core_func_vector_relational.cpp
        glm-0.9.8.4/glm/test/core/core_setup_force_cxx98.cpp
        glm-0.9.8.4/glm/test/core/core_setup_message.cpp
        glm-0.9.8.4/glm/test/core/core_setup_precision.cpp
        glm-0.9.8.4/glm/test/core/core_type_aligned.cpp
        glm-0.9.8.4/glm/test/core/core_type_cast.cpp
        glm-0.9.8.4/glm/test/core/core_type_ctor.cpp
        glm-0.9.8.4/glm/test/core/core_type_float.cpp
        glm-0.9.8.4/glm/test/core/core_type_int.cpp
        glm-0.9.8.4/glm/test/core/core_type_length.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat2x2.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat2x3.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat2x4.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat3x2.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat3x3.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat3x4.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat4x2.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat4x3.cpp
        glm-0.9.8.4/glm/test/core/core_type_mat4x4.cpp
        glm-0.9.8.4/glm/test/core/core_type_vec1.cpp
        glm-0.9.8.4/glm/test/core/core_type_vec2.cpp
        glm-0.9.8.4/glm/test/core/core_type_vec3.cpp
        glm-0.9.8.4/glm/test/core/core_type_vec4.cpp
        glm-0.9.8.4/glm/test/external/gli/core/dummy.cpp
        glm-0.9.8.4/glm/test/external/gli/core/generate_mipmaps.hpp
        glm-0.9.8.4/glm/test/external/gli/core/image2d.hpp
        glm-0.9.8.4/glm/test/external/gli/core/operation.hpp
        glm-0.9.8.4/glm/test/external/gli/core/operator.hpp
        glm-0.9.8.4/glm/test/external/gli/core/shared_array.hpp
        glm-0.9.8.4/glm/test/external/gli/core/shared_ptr.hpp
        glm-0.9.8.4/glm/test/external/gli/core/size.hpp
        glm-0.9.8.4/glm/test/external/gli/core/texture2d.hpp
        glm-0.9.8.4/glm/test/external/gli/core/texture2d_array.hpp
        glm-0.9.8.4/glm/test/external/gli/core/texture_cube.hpp
        glm-0.9.8.4/glm/test/external/gli/core/texture_cube_array.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/compression.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/fetch.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/gl_texture2d.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/gradient.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/loader.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/loader_dds10.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/loader_dds9.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/loader_tga.hpp
        glm-0.9.8.4/glm/test/external/gli/gtx/wavelet.hpp
        glm-0.9.8.4/glm/test/external/gli/gli.hpp
        glm-0.9.8.4/glm/test/gtc/gtc_bitfield.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_color_space.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_constants.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_epsilon.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_functions.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_integer.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_matrix_access.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_matrix_integer.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_matrix_inverse.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_matrix_transform.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_noise.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_packing.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_quaternion.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_random.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_reciprocal.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_round.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_type_aligned.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_type_precision.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_type_ptr.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_ulp.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_user_defined_types.cpp
        glm-0.9.8.4/glm/test/gtc/gtc_vec1.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_associated_min_max.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_closest_point.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_color_space.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_color_space_YCoCg.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_common.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_compatibility.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_component_wise.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_dual_quaternion.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_euler_angle.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_extend.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_extended_min_max.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_extented_min_max.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_fast_exponential.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_fast_square_root.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_fast_trigonometry.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_gradient_paint.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_handed_coordinate_space.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_int_10_10_10_2.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_integer.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_intersect.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_io.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_log_base.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_matrix_cross_product.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_matrix_decompose.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_matrix_interpolation.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_matrix_major_storage.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_matrix_operation.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_matrix_query.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_matrix_transform_2d.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_mixed_product.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_norm.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_normal.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_normalize_dot.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_number_precision.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_optimum_pow.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_orthonormalize.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_perpendicular.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_polar_coordinates.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_projection.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_quaternion.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_random.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_range.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_rotate_normalized_axis.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_rotate_vector.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_scalar_multiplication.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_scalar_relational.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_simd_mat4.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_simd_vec4.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_spline.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_string_cast.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_type_aligned.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_type_trait.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_vector_angle.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_vector_query.cpp
        glm-0.9.8.4/glm/test/gtx/gtx_wrap.cpp
        lodepng-master/examples/example_4bit_palette.cpp
        lodepng-master/examples/example_bmp2png.cpp
        lodepng-master/examples/example_decode.c
        lodepng-master/examples/example_decode.cpp
        lodepng-master/examples/example_encode.c
        lodepng-master/examples/example_encode.cpp
        lodepng-master/examples/example_encode_type.cpp
        lodepng-master/examples/example_gzip.cpp
        lodepng-master/examples/example_opengl.cpp
        lodepng-master/examples/example_optimize_png.cpp
        lodepng-master/examples/example_png2bmp.cpp
        lodepng-master/examples/example_png_info.cpp
        lodepng-master/examples/example_reencode.cpp
        lodepng-master/examples/example_sdl.c
        lodepng-master/examples/example_sdl.cpp
        lodepng-master/lodepng.cpp
        lodepng-master/lodepng.h
        lodepng-master/lodepng_benchmark.cpp
        lodepng-master/lodepng_unittest.cpp
        lodepng-master/lodepng_util.cpp
        lodepng-master/lodepng_util.h
        lodepng-master/pngdetail.cpp
        defines.h
        expected.h
        image.cpp
        image.h
        kdtree.cpp
        kdtree.h
        main.cpp
        ray.h
        raytracer.cpp
        raytracer.h
        scene.cpp
        scene.h
        scene_types.h
        unit-test.cpp)
